--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Onkeydown</title>
 </head>
 <body>
-    
+    <div class="main" id="myDiv">
+        <img src="https://i.pinimg.com/originals/47/03/09/4703093a70ba47001bf2c86319aae091.gif" alt="">
+    </div>
 </body>
 </html>
 <script src="js/script.js"></script>
